--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-meta-tags": "^1.0.1",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
